k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: na-schedule-allocator-backend
  labels: 
    app: na-schedule-allocator-backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: na-schedule-allocator-backend
  
  template:
    metadata:
      labels:
        app: na-schedule-allocator-backend
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: na-schedule-allocator-backend
          image: registry.kube.slc.net/slc/na-schedule-allocator-backend:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              set -e
              
              export DATABASE_URL="${DB_APP}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"

              echo $DATABASE_URL

              npx prisma migrate deploy

              npm start
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          
---
apiVersion: v1
kind: Service
metadata: 
  name: na-schedule-allocator-backend-service
spec:
  selector:
    app: na-schedule-allocator-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
