k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: na-schedule-allocator-backend-service
spec:
  selector:
    app: na-schedule-allocator-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7070
  type: ClusterIP
