k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: na-schedule-allocator-frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
      - nallocator.apps.slc.net
      secretName: wildcard-apps-slc-net-tls-secret
  
  rules:
    - host: nallocator.apps.slc.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: na-schedule-allocator-frontend-service
                port:
                  number: 80
